@@ -2,6 +2,7 @@
 
 	* init-lisp.el: Remove xgtags.
 	Remove winsav.
+	Remove word-count.
 
 	* init-elpa.el ("rust-mode"): Config rustfmt, racer, ac-racer.
 	(rust-mode-hook): Add cargo.
